# word2vec

./: .gitignore  pyproject.toml
bag_of_words/: implementation.py
data/: __init__.py  lotr-analogy-test-set.txt  utils.py
ngram/: implementation.py
word2vec/: cbow.py  negative_sampling.py  skipgram.py  utils.py
