[project]
name = "implementation"
version = "0.1.0"
description = ""
authors = [
    {name = "skew",email = "nunoskew@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch (>=2.9.0,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "datasets>=4.4.1",
    "pip>=25.3",
]
